--- a/public/admin.html
+++ b/public/admin.html
@@ -3,184 +3,175 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>// ADMIN: LOGIN //</title>
+    <title>Admin Login</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
     <style>
       :root {
-        --color-bg: #f8fafc;
-        --color-surface: #ffffff;
-        --color-primary: #8b5cf6;
-        --color-primary-light: #a78bfa;
-        --color-primary-dark: #7c3aed;
-        --color-text: #334155;
-        --color-text-light: #64748b;
-        --color-border: #e2e8f0;
-        --color-success: #10b981;
-        --color-danger: #ef4444;
-        --shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-        --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-          0 2px 4px -1px rgba(0, 0, 0, 0.06);
-        --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-          0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        --primary: #6366f1;
+        --bg-color: #f3f4f6;
+        --card-bg: #ffffff;
+        --text-main: #1f2937;
+        --text-muted: #6b7280;
+        --border: #e5e7eb;
+        --danger: #ef4444;
+        --success: #10b981;
       }
+
+      * { box-sizing: border-box; }
+
       body {
-        background-color: var(--color-bg);
-        color: var(--color-text);
+        background-color: var(--bg-color);
+        color: var(--text-main);
         font-family: "Inter", sans-serif;
         display: flex;
         justify-content: center;
         align-items: center;
         min-height: 100vh;
         margin: 0;
-        padding: 40px 20px;
-      }
-      .container {
-        background-color: var(--color-surface);
-        padding: 40px;
-        border-radius: 12px;
-        box-shadow: var(--shadow-lg);
-        width: 90%;
-        max-width: 600px;
-        text-align: center;
+        padding: 20px;
         position: relative;
-        overflow: hidden;
       }
-      .container::before {
-        content: "";
+
+      /* Tombol Kembali ke Beranda (Pojok Kiri Atas) */
+      .back-nav {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 4px;
-        background: linear-gradient(
-          90deg,
-          var(--color-primary),
-          var(--color-primary-light)
-        );
+        top: 20px;
+        left: 20px;
       }
-      h1 {
-        font-weight: 600;
-        color: var(--color-primary-dark);
-        font-size: 1.75rem;
-        margin-top: 0;
-        margin-bottom: 8px;
-      }
-      h2 {
+      .back-nav a {
+        text-decoration: none;
+        color: var(--text-muted);
         font-weight: 500;
-        color: var(--color-text);
-        border-bottom: 1px solid var(--color-border);
-        padding-bottom: 8px;
+        font-size: 0.9rem;
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        transition: color 0.2s;
+      }
+      .back-nav a:hover {
+        color: var(--primary);
+      }
+
+      .container {
+        background-color: var(--card-bg);
+        padding: 40px;
+        border-radius: 16px;
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        width: 100%;
+        max-width: 400px;
+        text-align: center;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+        font-weight: 700;
+        margin-bottom: 8px;
         margin-top: 0;
       }
+
       p {
-        color: var(--color-text-light);
+        color: var(--text-muted);
+        font-size: 0.95rem;
         margin-top: 0;
         margin-bottom: 32px;
-        font-size: 0.95rem;
       }
+
       .form-group {
         text-align: left;
-        margin-bottom: 16px;
+        margin-bottom: 20px;
       }
+
       .form-group label {
         display: block;
+        font-size: 0.85rem;
         font-weight: 500;
-        font-size: 0.875rem;
-        margin-bottom: 6px;
-        color: var(--color-text-light);
+        margin-bottom: 8px;
+        color: var(--text-main);
       }
-      .form-group input[type="text"],
-      .form-group input[type="email"],
-      .form-group input[type="password"] {
+
+      .form-group input {
         width: 100%;
-        padding: 12px 16px;
-        font-size: 0.9rem;
-        border: 1px solid var(--color-border);
+        padding: 12px;
+        border: 1px solid var(--border);
         border-radius: 8px;
-        box-sizing: border-box;
-        transition: all 0.3s ease;
-      }
-      .form-group input:focus {
+        font-size: 0.95rem;
         outline: none;
-        border-color: var(--color-primary-light);
-        box-shadow: 0 0 0 3px rgba(139, 92, 246, 0.1);
+        transition: border-color 0.2s, box-shadow 0.2s;
       }
+
+      .form-group input:focus {
+        border-color: var(--primary);
+        box-shadow: 0 0 0 3px rgba(99, 102, 241, 0.1);
+      }
+
       button {
-        font-family: "Inter", sans-serif;
-        font-size: 0.9rem;
-        font-weight: 500;
-        border-radius: 8px;
-        padding: 12px 24px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        background: var(--color-primary);
+        width: 100%;
+        padding: 12px;
+        background-color: #1e293b; /* Dark Slate */
         color: white;
         border: none;
-        position: relative;
-        overflow: hidden;
-        box-shadow: var(--shadow-sm);
+        border-radius: 8px;
+        font-weight: 600;
+        font-size: 0.95rem;
+        cursor: pointer;
+        transition: background 0.2s;
       }
-      button:disabled {
-        background-color: #cbd5e1;
-        color: #94a3b8;
-        cursor: not-allowed;
+
+      button:hover {
+        background-color: #0f172a;
       }
-      button:hover:not(:disabled) {
-        background: var(--color-primary-dark);
-        transform: translateY(-2px);
-        box-shadow: var(--shadow-md);
-      }
+
       .status-message {
-        height: 20px;
-        margin-top: 12px;
+        margin-top: 16px;
         font-size: 0.85rem;
-        color: var(--color-success);
+        height: 20px;
         opacity: 0;
-        transition: opacity 0.3s ease;
+        transition: opacity 0.3s;
       }
-      .status-message.show {
-        opacity: 1;
-      }
-      .text-center {
-        text-align: center;
-        margin-top: 20px;
+      .status-message.show { opacity: 1; }
+
+      .footer-text {
+        margin-top: 24px;
         font-size: 0.9rem;
+        color: var(--text-muted);
       }
-      a {
-        color: var(--color-primary);
+      .footer-text a {
+        color: var(--primary);
         text-decoration: none;
         font-weight: 500;
       }
+      .footer-text a:hover { text-decoration: underline; }
     </style>
   </head>
   <body>
+    <div class="back-nav">
+      <a href="/index.html">&larr; Kembali ke Beranda</a>
+    </div>
+
     <div class="container">
       <h1>Admin Login</h1>
-      <p>Silakan login untuk mengakses dashboard.</p>
+      <p>Enter your credentials to access the dashboard.</p>
 
       <div class="form-group">
-        <label for="adminEmail">Admin Email</label>
+        <label for="adminEmail">Email Address</label>
         <input type="email" id="adminEmail" placeholder="admin@example.com" />
       </div>
       <div class="form-group">
-        <label for="adminPassword">Admin Password</label>
+        <label for="adminPassword">Password</label>
         <input type="password" id="adminPassword" placeholder="••••••••" />
       </div>
 
-      <button id="adminLoginBtn" style="width: 100%; background: #334155">
-        Login Admin
-      </button>
+      <button id="adminLoginBtn">Sign In</button>
       <div class="status-message" id="adminStatusMessage"></div>
 
-      <p class="text-center">
-        Belum punya akun?
-        <a href="/admin_register.html">Buat akun admin</a>
-      </p>
+      <div class="footer-text">
+        Don't have an account? <a href="/admin_register.html">Register</a>
+      </div>
     </div>
 
     <script>
@@ -192,8 +183,8 @@
       function showAdminStatus(message, isError = false) {
         adminStatusMessage.textContent = message;
         adminStatusMessage.style.color = isError
-          ? "#ef4444"
-          : "var(--color-success)";
+          ? "var(--danger)"
+          : "var(--success)";
         adminStatusMessage.classList.add("show");
       }
 
@@ -212,11 +203,11 @@
             return data;
           })
           .then((data) => {
-            showAdminStatus("Login sukses! Mengarahkan...", false);
-            // SIMPAN TOKEN ke localStorage
+            showAdminStatus("Login successful! Redirecting...", false);
             localStorage.setItem("adminToken", data.token);
-            // ARAHKAN ke dashboard
-            window.location.href = "/dashboard.html";
+            setTimeout(() => {
+                window.location.href = "/dashboard.html";
+            }, 1000);
           })
           .catch((err) => showAdminStatus(err.message, true));
       });
