--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,93 +3,126 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>// ADMIN: DASHBOARD //</title>
+    <title>Dashboard</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       :root {
-        --color-bg: #f8fafc;
-        --color-surface: #ffffff;
-        --color-primary: #8b5cf6;
-        --color-primary-light: #a78bfa;
-        --color-primary-dark: #7c3aed;
-        --color-text: #334155;
-        --color-text-light: #64748b;
-        --color-border: #e2e8f0;
-        --color-success: #10b981;
-        --color-danger: #ef4444;
-        --shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-        --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-          0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        --primary: #6366f1;
+        --bg-color: #f3f4f6;
+        --surface: #ffffff;
+        --text-main: #1f2937;
+        --text-muted: #6b7280;
+        --border: #e5e7eb;
+        --danger: #ef4444;
       }
+
       body {
-        background-color: var(--color-bg);
-        color: var(--color-text);
+        background-color: var(--bg-color);
+        color: var(--text-main);
         font-family: "Inter", sans-serif;
         margin: 0;
-        padding: 40px 20px;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
+        padding: 40px;
         min-height: 100vh;
       }
+
       .dashboard-container {
-        background-color: var(--color-surface);
-        padding: 40px;
-        border-radius: 12px;
-        box-shadow: var(--shadow-lg);
-        width: 90%;
+        background-color: var(--surface);
+        padding: 32px 40px;
+        border-radius: 16px;
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
         max-width: 1200px;
-        margin: 40px auto;
-        text-align: left;
+        margin: 0 auto;
       }
+
       .header {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 1px solid var(--color-border);
+        margin-bottom: 40px;
         padding-bottom: 20px;
+        border-bottom: 1px solid var(--border);
       }
+
       .header h1 {
         margin: 0;
-        font-weight: 600;
-        color: var(--color-primary-dark);
-        font-size: 1.75rem;
+        font-size: 1.5rem;
+        font-weight: 700;
+        color: #111827;
       }
+
+      button#logoutBtn {
+        background-color: white;
+        color: var(--danger);
+        border: 1px solid var(--border);
+        padding: 8px 16px;
+        border-radius: 6px;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.2s;
+      }
+
+      button#logoutBtn:hover {
+        background-color: #fef2f2;
+        border-color: #fee2e2;
+      }
+
+      h2 {
+        font-size: 1.1rem;
+        font-weight: 600;
+        margin-bottom: 16px;
+        color: #374151;
+        display: flex;
+        align-items: center;
+        gap: 8px;
+      }
+
+      .table-wrapper {
+        border: 1px solid var(--border);
+        border-radius: 8px;
+        overflow-x: auto;
+        margin-bottom: 48px;
+      }
+
       table {
         width: 100%;
         border-collapse: collapse;
-        margin-top: 20px;
         font-size: 0.9rem;
       }
-      th, td {
-        border: 1px solid var(--color-border);
-        padding: 12px;
-        text-align: left;
-      }
+
       th {
-        background-color: #f8fafc;
+        background-color: #f9fafb;
+        color: var(--text-muted);
         font-weight: 600;
+        text-transform: uppercase;
+        font-size: 0.75rem;
+        letter-spacing: 0.05em;
+        text-align: left;
+        padding: 12px 16px;
+        border-bottom: 1px solid var(--border);
       }
-      tbody tr:nth-child(even) {
-        background-color: #fcfcfd;
+
+      td {
+        padding: 14px 16px;
+        border-bottom: 1px solid var(--border);
+        color: var(--text-main);
       }
-      button {
-        font-family: "Inter", sans-serif;
-        font-size: 0.9rem;
-        font-weight: 500;
-        border-radius: 8px;
-        padding: 12px 24px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        background: var(--color-primary);
-        color: white;
-        border: none;
+
+      tr:last-child td {
+        border-bottom: none;
       }
-      #logoutBtn {
-        background: var(--color-danger);
-        font-weight: 600;
+
+      tr:hover td {
+        background-color: #f9fafb;
       }
-      #logoutBtn:hover {
-        background: #dc2626;
+      
+      /* Status Badge Simple */
+      td:nth-child(3) { /* Asumsi kolom status di tabel API Key */
+        font-family: monospace;
       }
     </style>
   </head>
@@ -100,8 +133,8 @@
         <button id="logoutBtn">Logout</button>
       </div>
 
-      <h2 style="margin-top: 40px">User List</h2>
-      <div style="overflow-x: auto">
+      <h2>Registered Users</h2>
+      <div class="table-wrapper">
         <table>
           <thead>
             <tr>
@@ -110,20 +143,20 @@
               <th>Last Name</th>
               <th>Email</th>
               <th>Start Date</th>
-              <th>API Key IDs</th>
+              <th>Associated Key IDs</th>
             </tr>
           </thead>
           <tbody id="user-list"></tbody>
         </table>
       </div>
 
-      <h2 style="margin-top: 40px">API Key List</h2>
-      <div style="overflow-x: auto">
+      <h2>API Keys Database</h2>
+      <div class="table-wrapper">
         <table>
           <thead>
             <tr>
               <th>ID</th>
-              <th>API Key</th>
+              <th>API Key Token</th>
               <th>Status</th>
               <th>User ID</th>
               <th>User Email</th>
@@ -147,7 +180,6 @@
       });
 
       if (!token) {
-        alert("Anda harus login terlebih dahulu!");
         window.location.href = "/admin.html";
       } else {
         fetchData();
@@ -166,7 +198,7 @@
           ]);
 
           if (userRes.status === 401 || userRes.status === 403) {
-            throw new Error("Sesi Anda telah habis. Silakan login kembali.");
+            throw new Error("Session expired.");
           }
 
           const users = await userRes.json();
@@ -184,7 +216,7 @@
       function renderUsers(users) {
         userListBody.innerHTML = "";
         if (users.length === 0) {
-          userListBody.innerHTML = '<tr><td colspan="6">Tidak ada data user.</td></tr>';
+          userListBody.innerHTML = '<tr><td colspan="6" style="text-align:center; padding:20px; color:#9ca3af;">No users found.</td></tr>';
           return;
         }
 
@@ -195,8 +227,8 @@
               <td>${user.firstname}</td>
               <td>${user.lastname}</td>
               <td>${user.email}</td>
-              <td>${user.start_date ? user.start_date.split("T")[0] : "N/A"}</td>
-              <td>${user.api_key_ids.length > 0 ? user.api_key_ids.join(", ") : "None"}</td>
+              <td>${user.start_date ? user.start_date.split("T")[0] : "-"}</td>
+              <td>${user.api_key_ids.length > 0 ? user.api_key_ids.join(", ") : "<span style='color:#9ca3af'>None</span>"}</td>
             </tr>
           `;
           userListBody.innerHTML += row;
@@ -206,7 +238,7 @@
       function renderApiKeys(keys) {
         apiKeyListBody.innerHTML = "";
         if (keys.length === 0) {
-          apiKeyListBody.innerHTML = '<tr><td colspan="6">Tidak ada data API key.</td></tr>';
+          apiKeyListBody.innerHTML = '<tr><td colspan="6" style="text-align:center; padding:20px; color:#9ca3af;">No keys found.</td></tr>';
           return;
         }
 
@@ -214,11 +246,11 @@
           const row = `
             <tr>
               <td>${key.id}</td>
-              <td>${key.api_key}</td>
+              <td style="font-family:'JetBrains Mono', monospace; font-size:0.85rem;">${key.api_key}</td>
               <td>${key.status}</td>
-              <td>${key.user_id || "N/A"}</td>
-              <td>${key.user_email || "N/A"}</td>
-              <td>${key.expires_at ? key.expires_at.split("T")[0] : "N/A"}</td>
+              <td>${key.user_id || "-"}</td>
+              <td>${key.user_email || "-"}</td>
+              <td>${key.expires_at ? key.expires_at.split("T")[0] : "-"}</td>
             </tr>
           `;
           apiKeyListBody.innerHTML += row;
